fix: align logo

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ body {
     font-weight: bold;
     text-decoration: none;
     display: flex;
-    align-items: normal;
+    align-items: center;
     margin-right: auto;
 }
 
